--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: rgba(111, 0, 255, 0.651);
+  --main-color: rgb(234, 32, 39);
 }
 
 html {
@@ -35,12 +35,19 @@ html {
 
 .btn-main {
   background-color: var(--main-color);
-  color:#fff;
+  color: #fff;
 }
 
 .footer-icon {
   height: 20px;
   width: 20px;
+  color: #fff;
+}
+
+.footer-link {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 /* OTHER */
@@ -169,6 +176,11 @@ html {
 .card-project {
   width: 18rem;
   display: inline-block;
+}
+
+.card a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .card-project-desc {
